2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* templates/team.tmpl: Added.
	* teams.py: Support single team display.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Set up /teams/ actions.
	* templates/list-teams.tmpl: Listing of all teams.

	* view-module.py: 
	* utils.py: Added, moved TemplateInspector here.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Import into CVS.

	* gnome-modules.xml: Added glib, deskbar-applet.
	* releases.xml.in: Updated.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Uncomment and fill-up all entries.

	* update-stats.py (LocStatistics.ui_l10n_stats): Clean-up warning 
	about no team.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (go_go): List modules when none is selected.
	* templates/list-modules.tmpl: Added.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py: support updates for single modules.

	* gnome-modules.xml.in: Added xkeyboard-config for testing.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (get_stats_for): Sort by supportedness, then 
	language.

	* translation-teams.xml.in: Update.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* defaults.py (database_connection): switch to MySQL.

	* database.py (ArchivedStatistics, ArchivedInformation): 
	copy&paste from Statistics, Information tables (MySQL can't 
	handle redefinitions of column names.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (get_stats_for): 
	* update-stats.py: 
	Move to teams.TranslationLanguages() from database.Language.

	* teams.py: Added teams and language XML database.
	* database.py: Remove Language database.
	* translation-teams.xml.in: Imported teams database.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.update_stats_database): Added
	(works with both generic databases and archives).
	(LocStatistics.ui_l10n_stats): Switch to update_stats_database.