@@ -962,6 +962,8 @@
     </team>
 
     <team id="sr">
+        <_description>Serbian Translation Team</_description>
+
 	<_language code="sr">Serbian</_language>
 	<_language code="sr@Latn" hidden="1">Serbian Latin</_language>
 	<_language code="sr@ije">Serbian Jekavian</_language>
@@ -1047,6 +1049,7 @@
     </team>
 
     <team id="sv">
+        <_description>Swedish Translation Team</_description>
         <_language code="sv">Swedish</_language>
 
         <coordinator>
