@@ -2,6 +2,7 @@
 
 	* templates/team.tmpl: Added.
 	* teams.py: Support single team display.
+	(TranslationTeams.__init__): Add description field.
 
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
